# dotmac_erp

./: .agent-run.sh  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .ralph_state  .secrets.baseline  AGENTS.md  ARCHITECTURE_REVIEW.md  Bank Names.csv  CHANGELOG.md  CLAUDE.md  CONSISTENCY_CHECKLIST.md  Dockerfile  Dockerfile.hardened  Employee.csv  MERGE_PLAN.md  Makefile  PRD.md  README.md  UI_CONVENTIONS.md  ans  ap_detail_snapshot.md  ar_form_snapshot.md  audit-hang.txt  auth-hang.txt  banking-statements-snapshot.md  docker-compose.yml  go-live-checklist.html  gunicorn.conf.py  importtime.txt  modal-snapshot.md  mypy.ini  mypy.txt  package-lock.json  package.json  pyproject.toml  pytest-verbose.txt  pytest-x.txt  pytest.ini  (+3 more)
.claude/: settings.json
.claude/hooks/: check-multitenant.py  check-python-style.py  check-template-style.py
.claude/rules/: accounting-ui-ux-standard.md  celery-tasks.md  design-system.md  file-uploads.md  forms.md  notifications.md  patterns.md  security.md  services.md  templates.md  ui-ux.md  web-routes.md
.seabone/: MEMORY.md  SOUL.md  backlog.json  conflict-state.json
.semgrep/: dotmac-architecture.yml  dotmac-security.yml  dotmac-sqlalchemy.yml
alembic/: env.py  idempotent_ops.py
app/: alembic_utils.py  celery_app.py  celery_scheduler.py  config.py  db.py  errors.py  i18n.py  logging.py  main.py  net.py  observability.py  rls.py  startup.py  telemetry.py  templates.py  web_home.py
docs/: 2025_clean_sweep_plan.md  2025_erpnext_dotmac_reconciliation.md  STARTERS.md  app.md  architecture.md  auto_draft_payroll_plan.md  contra_transfer_implementation_plan.md  crm_integration.md  data_source_map.md  deployment.md  development.md  e2e_coverage_plan.md  erpnext_migration_design.md  finance-dashboard-fixes-qa.md  fix-implementation-final.md  fix-implementation-round2.md  fix-implementation-round3.md  fix-ready-loop.md  fix-reaudit-loop-round.md  frontend_elegance_review_2026-03-06.md  getting_started.md  gl_source_of_truth.md  help_training_implementation_plan.md  ifrs_book_entry_source_of_truth.md  ifrs_data_models_part1 (2).md  ifrs_data_models_part2 (2).md  ifrs_data_source_map.md  intelligence-engine-design.md  odoo-adaptation-phase1.md  odoo-adaptation-phase2.md  odoo-adaptation-phase3.md  odoo-adaptation-phase4.md  payroll_process.md  paystack_chargebacks_investigation.md  post-fix-verification-reaudit.md  post-round3-verification-reaudit.md  pr25-ci-fix-log.md  remita_integration_plan.md  route-inventory.md  scheduling_workflow_gap_analysis.md  (+7 more)
locales/: en.json
proposals/: NBTI_ERP_PROPOSAL.md
reports/: ap_subledger_reconciliation.csv  ar_subledger_reconciliation.csv
scripts/: add_active_filters.py  add_loggers.py  add_missing_contract_staff.py  allocate_exact_match_payments.py  allocate_splynx_fifo.py  audit_forms.py  audit_screenshots.py  backfill_2025_tax_returns.py  backfill_ap_invoice_line_vat.py  backfill_erpnext_ids.py  backfill_expense_paid_from_payment_entries.py  backfill_expense_paid_missing_only.py  backfill_gl_postings.py  backfill_splynx_tax.py  backfill_tax_transactions.py  backup_erp_db.sh  bootstrap_instance.py  bulk_gl_backfill.sql  bulk_gl_backfill_ar_payments.sql  bulk_gl_backfill_expenses.sql  bulk_gl_backfill_invoices.sql  bulk_gl_backfill_phase1.sql  bulk_gl_dryrun.sql  bulk_import.py  bulk_match_cross_account_transfers.sql  bulk_match_paystack_settlements.sql  bulk_match_uba_zenith_transfers.sql  bulk_match_zenith_contras.sql  bulk_update_employee_assigned_branches.py  bulk_update_employee_bank_branch_codes.py  capture_all_pages.py  check_mcp_db.py  check_route_logic.py  clean_slate_resync.py  cleanup_chart_of_accounts.py  cleanup_control_accounts.py  cleanup_stale_journals.py  close_fiscal_periods.py  compile.py  convert_live_search_to_compact.py  (+130 more)
templates/: admin_login.html  base.html  forgot_password.html  help_center.html  index.html  login.html  module_select.html  reset_password.html  reset_password_required.html
tests/: conftest.py  test_ap_invoice_web_methods.py  test_ap_invoice_web_transactions.py  test_ap_invoices_sort_signature.py  test_api_audit.py  test_api_auth_flow.py  test_api_crm_webhook_security.py  test_api_discipline.py  test_api_fa_post_acquisition.py  test_api_persons.py  test_api_scheduler.py  test_api_service_hooks.py  test_api_settings.py  test_ar_filter_templates.py  test_audit_middleware.py  test_auth_dependencies.py  test_auth_flow.py  test_auth_flow_cookies.py  test_avatar_services.py  test_backup_erp_db_script.py  test_config.py  test_core_services_extra.py  test_email_services.py  test_error_handlers.py  test_expense_approval_workflow.py  test_expense_facades.py  test_expense_idempotency.py  test_expense_reporting_filters.py  test_expense_reviewer_approver_filters.py  test_feature_flag_service.py  test_filter_template_targets.py  test_help_center_content.py  test_hr_info_change_routes.py  test_notification_email_dispatch.py  test_pagination_macro.py  test_payroll_email_task.py  test_person_services.py  test_security_headers_middleware.py  test_settings_api_services.py  test_startup.py  (+8 more)
tools/: license_gen.py
(+3197 files in other folders)
