[tool.poetry]
name = "dotmac_books"
version = "0.1.0"
description = "IFRS-based multi-tenant accounting software"
authors = ["DotMac <dev@dotmac.ng>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
sqlalchemy = "2.0.31"
psycopg = {version = "3.1.19", extras = ["binary"]}
alembic = "1.13.2"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
jinja2 = "3.1.4"
redis = "5.0.4"
celery = {version = "5.4.0", extras = ["redis"]}
prometheus-client = "0.20.0"
httpx = "0.27.0"
opentelemetry-api = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-instrumentation-sqlalchemy = "0.47b0"
opentelemetry-instrumentation-celery = "0.47b0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pyotp = "2.9.0"
cryptography = "42.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-asyncio = "^1.3.0"
pytest-playwright = "^0.7.2"
mypy = "^1.19.1"
types-python-dateutil = "^2.9.0.20251115"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
