[tool.poetry]
name = "dotmac_erp"
version = "0.1.0"
description = "IFRS-based multi-tenant accounting software"
authors = ["DotMac <dev@dotmac.ng>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
sqlalchemy = "2.0.31"
psycopg = {version = "3.1.19", extras = ["binary"]}
alembic = "1.13.2"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
jinja2 = "3.1.4"
redis = "5.0.4"
celery = {version = "5.4.0", extras = ["redis"]}
prometheus-client = "0.20.0"
httpx = "0.27.0"
opentelemetry-api = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-instrumentation-sqlalchemy = "0.47b0"
opentelemetry-instrumentation-celery = "0.47b0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pyotp = "2.9.0"
cryptography = "42.0.8"
gunicorn = "^23.0.0"
weasyprint = "^62.0"
python-dateutil = "^2.9.0"
shapely = "^2.0.0"
msoffcrypto-tool = "^6.0.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-asyncio = "^1.3.0"
pytest-playwright = "^0.7.2"
mypy = "^1.19.1"
types-python-dateutil = "^2.9.0.20251115"
pandas = "^2.3.3"
ruff = "^0.15.0"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"
bandit = "^1.9.3"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E712",   # comparison to True/False — intentional in SQLAlchemy filters (column == True)
    "E711",   # None comparison — SQLAlchemy uses `== None` for IS NULL filters
    "E741",   # ambiguous variable name — common in financial code (l, I)
    "B008",   # function calls in defaults — FastAPI Depends() pattern
    "B904",   # raise from — gradual adoption, too many existing violations
    "S101",   # assert used — OK in tests
    "S104",   # binding to all interfaces — OK for Docker
    "S110",   # try-except-pass — some are intentional (optional cleanup)
    "UP007",  # X | Y unions — keep Optional[] for readability
    "UP042",  # StrEnum — large refactor, existing str+Enum pattern works
    "SIM102", # collapsible if — readability preference, not a bug
    "SIM105", # suppressible exception — contextlib.suppress() not always clearer
    "SIM108", # ternary — multiline if/else often more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "B017", "SIM117"]  # test fixtures use hardcoded values
"alembic/**/*.py" = ["E402", "F841", "S608"]  # migrations: late imports, unused vars, raw SQL
"scripts/**/*.py" = ["T20", "E402", "S"]  # scripts: print, late imports, relaxed security

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = false  # gradual adoption
check_untyped_defs = true

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tasks/*",
    "app/celery_app.py",
    "app/config.py",
    "alembic/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
